--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/markhorsell/netlify-functions#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "netlify-lambda": "^2.0.3"
   },
   "devDependencies": {
